--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
+        "@react-navigation/bottom-tabs": "^7.3.12",
+        "@react-navigation/native": "^7.1.8",
+        "@react-navigation/native-stack": "^7.3.12",
+        "@react-navigation/stack": "^7.3.1",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
+        "expo-image-picker": "^16.1.4",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
-        "mongoose": "^7.5.0"
+        "lucide-react-native": "^0.508.0",
+        "mongoose": "^7.5.0",
+        "react-native": "^0.79.2",
+        "react-native-chart-kit": "^6.12.0",
+        "react-native-safe-area-context": "^5.4.0",
+        "react-native-screens": "^4.10.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
